# diff-coverage

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: benchmark_results.md
src/: main.rs
src/app/: error.rs  files.rs  mod.rs  output.rs  reporting.rs  validation.rs
src/cli/: mod.rs
src/coverage/: clover.rs  cobertura.rs  mod.rs  store.rs
src/diff/: git.rs  types.rs
src/report/: console.rs  gitlab_code_quality.rs  json.rs  mod.rs  summary.rs
src/util/: path.rs
tests/: e2e_cli.rs
tests/fixtures/: coverage_clover.xml  coverage_cobertura.xml  git_diff.diff
tests/fixtures/same_name/: same_name_coverage_cobertura.xml  same_name_diff.text
